<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="turn_off_all_notifications">Turn off all notifications</string>
    <string name="turn_on_all_notifications">Turn on all notifications</string>
    <string name="off">Off</string>
    <string name="default1">Default</string>
    <string name="display_theme">Display theme</string>
    <string name="select_your_prefered_display_theme">Select your preferred display theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="use_device_theme">Use device theme</string>
    <string name="notification_settings">Notification settings</string>
    <string name="weathery_will_send_you_notification_whenever_the_weather_changes">Weathery will send you notification whenever the weather changes</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="turn_off_all_notification">Turn off all notification</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default_fate">Default(fate)</string>
    <string name="vibrate">Vibrate</string>
    <string name="banner">Banner</string>
    <string name="show_notification_preview_on_the_top_of_your_screen">Show notification preview on the top of your screen</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_will_be_deleted_after_30_days">Notifications will be deleted after 30 days</string>
    <string name="Cancel">Cancel</string>
    <string name="select_your_language_you_best_understand">Select your language you best understand</string>
    <string name="language">Language</string>
    <string name="navigate_back">Navigate back</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="customize_your_weather_app">Customize your weather app</string>
    <string name="notificaton_settings">Notification settings</string>
    <string name="on">On</string>
    <string name="english_united_kingdom">English(United Kingdom)</string>
    <string name="unit_settings">Unit Settings</string>
    <string name="temperature">Temperature</string>
    <string name="f">°F</string>
    <string name="c">°C</string>
    <string name="pressure">Pressure</string>
    <string name="hpo">hPo</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="km_h">km/h</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="version_6_7_02">Version 6.7.02</string>
    <string name="english">English</string>
    <string name="expect_rain">Expect rain in 1 hour. This should last for 3 days</string>
    <string name="heavy_rain_northeast">There will be heavy rain for some in northeast with a few brighter exceptions.</string>
    <string name="time">Now</string>
    <string name="empty_now">Empty Now</string>
    <string name="confirmation">Are you Sure?</string>
    <string name="empty_notification">Are you sure you want to empty your notifications. You\'ll lose access to them!</string>
    <string name="empty_can_info">Nothing to see here. When you recieve weather updates, they\'ll appear here</string>
    <string name="empty">Empty</string>
</resources>