<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingBottom="16dp"
    tools:context=".NotificationSettings">

    <TextView
        android:id="@+id/tvNotificationSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/outfit_extrabold"
        android:text="@string/notification_settings"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/ivBackButton"
        app:layout_constraintTop_toBottomOf="@+id/ivBackButton" />

    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:paddingEnd="20dp"
        android:src="@drawable/ic_arrow_back"
        app:tint="?android:colorForeground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNotificationSettingsTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/tvNotificationDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/weathery_will_send_you_notification_whenever_the_weather_changes"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPushNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/push_notifications"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNotificationDescription" />

            <Switch
                android:id="@+id/swNotificationOnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:checked="true"
                android:thumb="@drawable/thumb_selector"
                android:track="@drawable/track_selector"
                android:fontFamily="@font/outfit_light"
                android:text="@string/turn_off_all_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPushNotifications"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <RadioGroup
                android:id="@+id/rgPushNotifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swNotificationOnOff">

                <RadioButton
                    android:id="@+id/rBtnDaily"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:button="@null"
                    android:drawableEnd="@drawable/ic_done"
                    android:fontFamily="@font/outfit_semibold"
                    android:gravity="center_vertical"
                    android:text="@string/daily"
                    android:textSize="16sp"
                    app:drawableTint="?android:colorForeground" />

                <RadioButton
                    android:id="@+id/rBtnWeekly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"

                    android:button="@null"
                    android:fontFamily="@font/outfit_semibold"
                    android:gravity="center_vertical"
                    android:text="@string/weekly"
                    android:textSize="16sp"
                    app:drawableTint="?android:colorForeground"/>

                <RadioButton
                    android:id="@+id/rBtnMonthly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:button="@null"
                    android:fontFamily="@font/outfit_semibold"
                    android:gravity="center_vertical"
                    android:text="@string/monthly"
                    android:textSize="16sp"
                    app:drawableTint="?android:colorForeground" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgPushNotifications" />

            <TextView
                android:id="@+id/tvNotificationTones"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/notification_tone"
                android:textAllCaps="true"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/tvDefaultTone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/outfit_regular"
                android:gravity="center_vertical"
                android:text="@string/default_fate"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:drawableTint="?android:colorForeground"
                android:drawableEnd="@drawable/ic_arrow_forward"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNotificationTones" />

            <TextView
                android:id="@+id/tvVibrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/vibrate"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDefaultTone" />

            <TextView
                android:id="@+id/tvVibrateStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/default1"
                android:textSize="18sp"
                android:drawableTint="?android:colorForeground"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVibrate"
                android:drawableEnd="@drawable/ic_arrow_forward"/>

            <RadioGroup
                android:id="@+id/rgVibrate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvVibrateStatus"
                app:layout_constraintStart_toStartOf="@+id/tvVibrateStatus"
                app:layout_constraintTop_toBottomOf="@+id/tvVibrateStatus">

                <RadioButton
                    android:id="@+id/rBtnVibrateOff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:fontFamily="@font/outfit_semibold"
                    android:text="@string/off" />

                <RadioButton
                    android:id="@+id/rBtnVibrateDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:checked="true"
                    android:fontFamily="@font/outfit_semibold"
                    android:text="@string/default1" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvBanner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/banner"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgVibrate" />

            <TextView
                android:id="@+id/tvBannerOnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/show_notification_preview_on_the_top_of_your_screen"
                app:layout_constraintEnd_toStartOf="@id/swBannerOnOff"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBanner" />

            <Switch
                android:id="@+id/swBannerOnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:thumb="@drawable/thumb_selector"
                android:track="@drawable/track_selector"
                app:layout_constraintBottom_toBottomOf="@id/tvBannerOnOff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvBannerOnOff"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.cardview.widget.CardView
        android:id="@+id/divider3"
        android:layout_width="120dp"
        android:layout_height="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="?android:colorForeground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>