<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="24dp"
    android:paddingBottom="16dp"
    tools:context=".DisplayTheme">
            <TextView
                android:id="@+id/tvDisplayThemeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_extrabold"
                android:text="@string/display_theme"
                android:layout_marginTop="16dp"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/ivBackButton"
                app:layout_constraintTop_toBottomOf="@+id/ivBackButton" />

            <ImageView
                android:id="@+id/ivBackButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingEnd="20dp"
                android:src="@drawable/ic_arrow_back"
                app:tint="?android:colorForeground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayThemeTitle"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/tvSelectDisplayTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/outfit_regular"
                android:text="@string/select_your_prefered_display_theme"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rgTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvSelectDisplayTheme"
                app:layout_constraintTop_toBottomOf="@+id/tvSelectDisplayTheme">

                <RadioButton
                    android:id="@+id/rbtnLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:textSize="18sp"
                    android:fontFamily="@font/outfit_semibold"
                    android:text="@string/light" />

                <RadioButton
                    android:id="@+id/rBtnDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/dark"
                    android:textSize="18sp"
                    android:fontFamily="@font/outfit_semibold"
                    />

                <RadioButton
                    android:id="@+id/rbtnUseDeviceTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/use_device_theme"
                    android:textSize="18sp"
                    android:fontFamily="@font/outfit_semibold"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:fontFamily="@font/outfit_light"
                android:text="@string/version_6_7_02"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/divider3"
        android:layout_width="120dp"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="?android:colorForeground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>