<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:paddingTop="50dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:textStyle="bold"
        android:textSize="16sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/weathery_orange"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:id="@+id/frame_cancel"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_button_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/frame_empty_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmation"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/outfit_light"
            android:text="@string/Cancel"
            android:textColor="@color/weathery_orange"
            android:textSize="18sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_empty_now"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_button_1"
        android:backgroundTint="@color/weathery_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frame_cancel"
        app:layout_constraintTop_toTopOf="@id/frame_cancel">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/outfit_light"
            android:text="@string/empty_now"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>