<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backButton_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ep_back"
            app:layout_constraintBottom_toBottomOf="@+id/notifications_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/notifications_textView"
            app:tint="@color/default_colour" />

        <TextView
            android:id="@+id/notifications_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/outfit_medium"
            android:text="@string/notifications"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/archiveButton_imageView"
            app:layout_constraintStart_toEndOf="@+id/backButton_imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/archiveButton_imageView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/trash_empty"
            app:layout_constraintBottom_toBottomOf="@id/notifications_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/notifications_textView"
            app:tint="@color/default_colour" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_notification"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notifications_textView"
            tools:listitem="@layout/notifications_list_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_state_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/empty_trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.373"
                app:srcCompat="@drawable/trash_empty" />

            <TextView
                android:id="@+id/emptyContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/empty"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/empty_trash"
                app:layout_constraintStart_toStartOf="@+id/empty_trash"
                app:layout_constraintTop_toBottomOf="@+id/empty_trash" />

            <TextView
                android:id="@+id/emptyWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingLeft="80dp"
                android:paddingRight="80dp"
                android:text="@string/empty_can_info"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/emptyContainer"
                app:layout_constraintStart_toStartOf="@+id/emptyContainer"
                app:layout_constraintTop_toBottomOf="@+id/emptyContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/emptyBottomSheet"
        android:layout_width="match_parent"
        android:background="@android:color/transparent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="16dp"
            android:layout_marginBottom="-16dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <TextView
                    android:id="@+id/tvAreYouSure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_extrabold"
                    android:text="@string/confirmation"
                    android:textColor="@color/weathery_orange"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/outfit_semibold"
                    android:text="@string/empty_notification"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/btnDelete"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/btnCancelDelete"
                    app:layout_constraintTop_toBottomOf="@+id/tvAreYouSure" />

                <Button
                    android:id="@+id/btnCancelDelete"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/weathery_orange"
                    android:background="@drawable/bg_button_1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnDelete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="112dp"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_now"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/bg_button_1"
                    android:backgroundTint="@color/weathery_orange"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnCancelDelete"
                    app:layout_constraintTop_toTopOf="@+id/btnCancelDelete" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>